--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -23,6 +23,18 @@
   }
 
   &__container {
+    max-width: 480px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 15px;
+
+    @media  (min-width:767px) {
+      max-width:768px;
+    }
+
+    @media  (min-width:1200px) {
+      max-width: 1200px;
+    }  
     display: flex;
     padding: 60 15px;
     flex-direction: column;
@@ -188,8 +200,11 @@
     }
     @media (min-width: 480px) {
       min-width: 450px;
-    
-    }
+        }
+        @media (min-width: 1200px) {
+          min-width: 380px;
+            }
+
     width: 100%;
     height: 50px;
     padding-left: 16px;
