--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -33,12 +33,12 @@
 
   @media (min-width:1200px) {
     background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
-    url(../../../mages/main/main-1600.jpg);
+    url(../../mages/main/main-1600.jpg);
   @media (min-device-pixel-ratio: 2),
   (min-resolution: 192dpi),
   (min-resolution: 2dppx) {
     background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
-    url(../../../images/main/main-1600@2x.jpg);
+    url(../../images/main/main-1600@2x.jpg);
   }
   }
 
