--- a/css/main.css
+++ b/css/main.css
@@ -1219,9 +1219,21 @@ li {
   width: 100%;
   margin: 0 auto;
   padding: 0 15px;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+@media (max-width: 479px) {
+  .team__container {
+    -webkit-box-align: stretch;
+        -ms-flex-align: stretch;
+            align-items: stretch;
+  }
+}
+@media (min-width: 1092px) and (max-width: 1199px) {
+  .team__container {
+    padding: 0 70px;
+  }
 }
 @media (min-width: 768px) {
   .team__container {
@@ -1369,6 +1381,13 @@ li {
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
+@media (max-width: 479px) {
+  .clients__wrapper {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
 @media (min-width: 768px) {
   .clients__wrapper {
     max-width: 738px;
@@ -1421,6 +1440,12 @@ li {
           transition-duration: 250ms;
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media (max-width: 479px) {
+  .clients__link {
+    margin-bottom: 10px;
+    margin-left: 10px;
+  }
 }
 .clients__link:hover {
   background-color: #f5f4fa;
