--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,128 +1,134 @@
 /* Наша команда */
-.team 
-{
-    margin: 0 auto;
-    width: 100%;
-    padding-top: 60px;
-    padding-bottom: 60px;
-    background-color: $light-grey-color;
-    &__image {
-      @media (min-width: 768px) {
-        width: 354px;
-        height: 374px;
-      }
-
-      @media (min-width: 1200px) {
-        width: 270px;
-        height: 260px;
-      }
-    }
-
-    &__container {
-      display: flex;
-      align-items:center;
-      flex-direction: column;
-      max-width: 1200px;
-      width: 100%;
-      margin: 0 auto;
-      padding: 0 15px;
-      justify-content: space-between;
-      
-      @media (min-width: 768px) {
-        flex-direction: row;
-        flex-wrap: wrap;
-      }
-
-      @media (min-width: 1200px) {
-        
-      }
-    }
-
-    &__box {
-      display: flex;
-      flex-direction: column;
-      width: 450px;
-      height: 622px;
-      background: $white-color;
-      box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-        0px 2px 1px rgba(0, 0, 0, 0.2);
-      border-radius: 0px 0px 4px 4px;
-
-      @media (max-width: 767px) {
-      &:nth-child(-n+3) {
-        margin-bottom: 30px;
-      }
-    }
-
-      @media (min-width: 768px) {
+.team {
+  margin: 0 auto;
+  width: 100%;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: $light-grey-color;
+  &__image {
+    @media (min-width: 768px) {
       width: 354px;
-      height: 536px;
-      &:nth-child(-n+2) {
-        margin-bottom: 30px;
-      }
-      }
-
-      @media (min-width: 1200px) {
-        width: 270px;
-      height: 428px;
-      &:nth-child(-n+4) {
-        margin-bottom: 0px;
-      }
-      }
-    }
-
-    &__description {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding-top: 30px;
-      padding-bottom: 24px;
-      padding-left: 122px;
-      padding-right: 122px;
-
-      @media (min-width: 768px) {
-        padding-bottom: 24px;
-      padding-left: 74px;
-      padding-right: 74px;
-        }
-
-        @media (min-width: 1200px) {
-          padding-bottom: 30px;
-          padding-left: 32px;
-          padding-right: 32px;
-        }
-        }
-            
-    &__title {
-      text-align: center;
-      font-size: 28px;
-      line-height: 1.179;
-      color: $dark-color-text;
-      margin-bottom: 50px;
-      @media (min-width: 1200px) {
-        font-size: 36px;
-        line-height: 1.167;
-      }
-    }
-
-    &__name {
-      font-weight: 500;
-      font-size: 16px;
-      line-height: 1.188;
-      text-align: center;
-      color: $dark-color-text;
-      margin-bottom: 10px;
-    }
-
-    &__position {
-      font-size: 16px;
-      line-height: 1.188;
-      text-align: center;
-      margin-bottom: 16px;
+      height: 374px;
     }
 
     @media (min-width: 1200px) {
-      padding-top: 94px;
-    padding-bottom: 94px;
+      width: 270px;
+      height: 260px;
     }
+  }
+
+  &__container {
+    display: flex;
+
+    @media (max-width: 479px) {
+      align-items: stretch;
+    }
+    align-items: center;
+    flex-direction: column;
+    max-width: 1200px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 15px;
+    justify-content: space-evenly;
+
+    @media (min-width: 1092px) and (max-width: 1199px) {
+      padding: 0 70px;
+    }
+
+    @media (min-width: 768px) {
+      flex-direction: row;
+      flex-wrap: wrap;
+    }
+
+    @media (min-width: 1200px) {
+    }
+  }
+
+  &__box {
+    display: flex;
+    flex-direction: column;
+    width: 450px;
+    height: 622px;
+    background: $white-color;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+      0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+
+    @media (max-width: 767px) {
+      &:nth-child(-n + 3) {
+        margin-bottom: 30px;
+      }
+    }
+
+    @media (min-width: 768px) {
+      width: 354px;
+      height: 536px;
+      &:nth-child(-n + 2) {
+        margin-bottom: 30px;
+      }
+    }
+
+    @media (min-width: 1200px) {
+      width: 270px;
+      height: 428px;
+      &:nth-child(-n + 4) {
+        margin-bottom: 0px;
+      }
+    }
+  }
+
+  &__description {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 30px;
+    padding-bottom: 24px;
+    padding-left: 122px;
+    padding-right: 122px;
+
+    @media (min-width: 768px) {
+      padding-bottom: 24px;
+      padding-left: 74px;
+      padding-right: 74px;
+    }
+
+    @media (min-width: 1200px) {
+      padding-bottom: 30px;
+      padding-left: 32px;
+      padding-right: 32px;
+    }
+  }
+
+  &__title {
+    text-align: center;
+    font-size: 28px;
+    line-height: 1.179;
+    color: $dark-color-text;
+    margin-bottom: 50px;
+    @media (min-width: 1200px) {
+      font-size: 36px;
+      line-height: 1.167;
+    }
+  }
+
+  &__name {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.188;
+    text-align: center;
+    color: $dark-color-text;
+    margin-bottom: 10px;
+  }
+
+  &__position {
+    font-size: 16px;
+    line-height: 1.188;
+    text-align: center;
+    margin-bottom: 16px;
+  }
+
+  @media (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
