--- a/sass/layout/_advantages.scss
+++ b/sass/layout/_advantages.scss
@@ -27,7 +27,10 @@
   }
   &__svg {
     @extend %flexcenter;
-    width: 450px;
+    @media (max-width: 480px) {
+      width: 100vw;
+    }
+    
     height: 120px;
     background-color: $light-grey-color;
     border-radius: 4px;
@@ -82,11 +85,14 @@
   }
   &__descr {
     font-weight: 400;
-    font-size: 14px;
+        font-size: 14px;
     line-height: 24px;
     letter-spacing: 0.03em;
     margin-top: 10px;
     color: var(--main-color-text);
     height: 72px;
+    @media (max-width: 480px) {
+      width: 100vw;
+    }
   }
 }
