--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -10,6 +10,9 @@
   @include transition(fill);
   // margin-bottom: 20px;
   margin-right: 88px;
+  @media  (min-width: 320px) and (max-width: 479px){
+    margin-left: 10px;
+  }
   @media  (min-width:1200px) {
     margin-right: 92px;
   }
