--- a/sass/layout/_advantages.scss
+++ b/sass/layout/_advantages.scss
@@ -51,6 +51,9 @@
   &__list {
     display: flex;
     width: 450px;
+    @media  (min-width: 320px) and (max-width: 479px){
+      width: 100%;
+          }
     height: 226px;
     flex-direction: column;
 
@@ -71,12 +74,18 @@
     }
   }
   &__title {
+    // display: block;
     font-size: 14px;
     line-height: 1.14;
     text-transform: uppercase;
     color: $dark-color-text;
+    text-align: center;
     margin: 0 auto;
     margin-top: 30px;
+    @media  (min-width: 320px) and (max-width: 479px){
+      width: 320px;
+      text-align: center;
+    }
     @media (min-width: 768px) {
       margin-left: 0;
     }
@@ -84,6 +93,7 @@
     }
   }
   &__descr {
+    display: block;
     font-weight: 400;
         font-size: 14px;
     line-height: 24px;
@@ -93,6 +103,14 @@
     height: 72px;
     @media (max-width: 480px) {
       width: 100vw;
+    }
+  }
+
+  &__wrapper {
+    // text-align: center;
+    @media  (min-width: 320px) and (max-width: 479px){
+      width: 100%;
+      text-align: center;
     }
   }
 }
