--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -57,9 +57,28 @@
     @include transition(fill);
   }
 
+  &__list {
+    @media  (min-width: 320px) and (max-width: 479px){
+      width: calc((100% - 20px)/2);
+    }
+
+    @media  (min-width: 480px){
+      width: 210px;
+    }
+
+    @media  (min-width: 768px){
+      width: 226px;
+    }
+
+    @media  (min-width: 1200px){
+      width: 170px;
+    }
+  }
+
   &__link {
-    width: 210px;
+    display: flex;
     height: 92px;
+    
     @extend %flexcenter;
     @media (max-width: 479px) {
       margin-bottom: 10px;
