--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -31,8 +31,14 @@
     margin: 0;
     @media (min-width: 768px) and (max-width: 1199px) {}
     justify-content: space-evenly;
+    padding: 0 15px;
   }
   &__image {
+    @media  (min-width: 320px) and (max-width: 479px){
+      display: flex;
+    justify-content: center;
+    }
+    
     width: 100%;
     height: 294px;
     position: relative;
@@ -84,19 +90,24 @@
     color: $mainColorText;
   }
   &__wrapper {
-    // width: 450px;
-    height: 404px;
+        height: 404px;
     box-shadow: none;
-    
+       
     @include transition(box-shadow);
     &:hover {
       box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
         1px 4px 6px rgba(0, 0, 0, 0.16);
     }
 
+    @media (min-width: 808px) and (max-width: 1199px) {
+      width: 354px;
+      &:nth-child(2n + 1){
+        margin-right: 40px;
+      }
+    }
+
     @media (min-width: 768px) and (max-width: 1199px) {
       width: 354px;
-      // height: 404px;
       &:nth-child(-n + 2) {
         height: 440px;
       }
@@ -182,6 +193,11 @@
     }
   }
   &__link{
+    @media  (min-width: 320px) and (max-width: 479px){
+      width: 320px;
+    }
+    display: block;
+    
   @media (min-width: 768px) and (max-width: 1199px) {
   &__wrapper:first-child &__box{
     padding-bottom: 60px;
