--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -54,6 +54,11 @@
       0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
 
+    @media  (min-width: 320px) and (max-width: 479px){
+      width: calc(100% - 20px);
+      height: calc(100% - 10px);
+    }
+
     @media (max-width: 767px) {
       &:nth-child(-n + 3) {
         margin-bottom: 30px;
