--- a/css/main.css
+++ b/css/main.css
@@ -536,11 +536,10 @@ li {
 }
 
 .mobilemodal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%) scale(1);
-          transform: translate(-50%, -50%) scale(1);
+  position: fixed;
+  top: 0;
+  left: 0;
+  padding: 40px;
   -webkit-transition-property: -webkit-transform;
   transition-property: -webkit-transform;
   transition-property: transform;
@@ -558,9 +557,26 @@ li {
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  min-width: 405px;
-  min-height: 609px;
-  padding: 40px;
+  width: 100vw;
+  height: 100vh;
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+}
+.mobilemodal.is-hidden {
+  -webkit-transform: translateX(-100%);
+          transform: translateX(-100%);
+}
+@media (min-width: 320px) and (max-width: 479px) {
+  .mobilemodal {
+    min-width: 300px;
+    min-height: 609px;
+  }
+}
+@media (min-width: 320px) {
+  .mobilemodal {
+    min-width: 280px;
+    min-height: 609px;
+  }
 }
 .mobilemodal__close {
   fill: #212121;
@@ -654,7 +670,8 @@ li {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 357px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -675,6 +692,11 @@ li {
           transition-duration: 250ms;
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media (min-width: 320px) and (max-width: 479px) {
+  .mobilemodal__socialnetworks {
+    padding-right: 2px;
+  }
 }
 .mobilemodal__socialnetworks:focus, .mobilemodal__socialnetworks:hover {
   color: rgb(2, 5, 168);
@@ -1155,7 +1177,7 @@ li {
 }
 @media (min-width: 320px) and (max-width: 479px) {
   .advantages__title {
-    width: 320px;
+    min-width: 320px;
     text-align: center;
   }
 }
