--- a/sass/layout/_advantages.scss
+++ b/sass/layout/_advantages.scss
@@ -83,7 +83,7 @@
     margin: 0 auto;
     margin-top: 30px;
     @media  (min-width: 320px) and (max-width: 479px){
-      width: 320px;
+      min-width: 320px;
       text-align: center;
     }
     @media (min-width: 768px) {
