--- a/css/main.css
+++ b/css/main.css
@@ -262,9 +262,13 @@ li {
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  min-width: 405px;
-  min-height: 609px;
-  padding: 40px;
+}
+@media (min-width: 480px) {
+  .modal {
+    min-width: 405px;
+    min-height: 609px;
+    padding: 40px;
+  }
 }
 @media (min-width: 1200px) {
   .modal {
@@ -277,6 +281,7 @@ li {
   -webkit-transform: translate(-50%, -50%) scale(1.2);
           transform: translate(-50%, -50%) scale(1.2);
   opacity: 0;
+  width: 320px;
 }
 
 .close {
@@ -821,7 +826,7 @@ li {
 .hero__title {
   margin-left: auto;
   margin-right: auto;
-  width: 360px;
+  max-width: 360px;
   margin-bottom: 30px;
   font-size: 26px;
   line-height: 1.62;
