--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,4 +1,5 @@
 .modal {
+  
   position: absolute;
   top: 50%;
   left: 50%;
@@ -10,9 +11,12 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  min-width: 405px;
+  @media (min-width:480px) {
+    min-width: 405px;
   min-height: 609px;
   padding: 40px;
+  }
+  
 
   @media (min-width:1200px) {
     min-width: 528px;
@@ -21,8 +25,9 @@
 }
 
 .backdrop.is-hidden .modal {
-  transform: translate(-50%, -50%) scale(1.2);
+   transform: translate(-50%, -50%) scale(1.2);
   opacity: 0;
+  width: 320px;
   
 }
 
