--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -61,7 +61,7 @@
   &__title {
     margin-left: auto;
     margin-right: auto;
-    width: 360px;
+    max-width: 360px;
     margin-bottom: 30px;
     font-size: 26px;
     line-height: 1.62;
